--- a/accounting.html
+++ b/accounting.html
@@ -18,6 +18,7 @@
 				<option val="">請選擇類別</option>
 				<option val="eat">吃的</option>
 				<option val="play">玩的</option>
+				<option val="living">住的</option>
 				<option val="other">其他</option>
 			</select>
 			<label for="item">項目:</label>
