--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-     <link rel="stylesheet" type="text/css" href="">
-	<title>香蕉記憶軟體!!!</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title></title>
 </head>
 <body>
-    date<input type="date" name="">
-    mondy<input type="date" name="">
-    項目<select id="moomoo">
-    <option value="" selected>eat</option>
-    <option value="" selected>home</option>
-    <option value="" selected>other</option>
+<img src=https://img10.deviantart.net/1a36/i/2008/354/c/7/banana_cow_by_kyuubi_of_the_night.jpg id='titleImg'>
+<h1>最新版香蕉記帳軟體</h1>
+<button class="btn btn-primary" onclick="window.location.href='accounting.html'">記帳</button> <br>
+<button class="btn btn-primary" onclick="window.location.href='recent10.html'">近10筆支出</button> <br>
+<button class="btn btn-primary" onclick="window.location.href='lookup.html'">支出查詢</button> <br>
+<p>有問題的話去找老師</p>
+<p>Have questions to find the teacher</p>
 </body>
 </html>
