--- a/lookup.html
+++ b/lookup.html
@@ -1,11 +1,69 @@
+
 <!DOCTYPE html>
 <html>
-<table></table>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script type="text/javascript" src="js/jquery-1.12.2.min.js"></script>
+	<script type="text/javascript" src="js/fdb-all.min.js"></script>
+	<title></title>
+</head>
 <body>
-	<form>
-		<input type="radio" name="gender" value="記帳" checked>記帳 <br>
-		<input type="radio" name="gender" value="近十筆資料"> 近十筆資料<br>
-		<input type="radio" name="gender" value="指定時間">  指定時間
-	</form>
+<h1>支出查詢</h1>
+
+<div class="radio">
+  <label><input type="radio" name="method" value="curMonth">本月份</label>
+</div>
+<div class="radio">
+  <label><input type="radio" name="method" value="time">指定期間</label>
+</div>
+<input type="date" name="" id="fromTime"> - <input type="date" name="" id="toTime"><br>
+<button class="btn btn-primary little" id="lookup">查詢</button>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>類別</th>
+      <th>金額</th>
+      <th>比例</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>吃的</td>
+      <td id="eatCost">0</td>
+      <td id="eatProportion">0%</td>
+    </tr>
+    <tr>
+      <td>玩的</td>
+      <td id="playCost">0</td>
+      <td id="playProportion">0%</td>
+    </tr>
+    <tr>
+      <td>其他</td>
+      <td id="otherCost">0</td>
+      <td id="otherProportion">0%</td>
+    </tr>
+    <tr>
+      <td>總計</td>
+      <td id="totalCost">0</td>
+      <td>100%</td>
+    </tr>
+  </tbody>
+</table>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>日期</th>
+      <th>項目</th>
+      <th>類別</th>
+      <th>金額</th>
+    </tr>
+  </thead>
+  <tbody id="accountingTable">
+   
+  </tbody>
+</table>
+<script type="text/javascript" src="js/lookup.js"></script>
 </body>
 </html>
